--- a/gtfs_pubsub/pyproject.toml
+++ b/gtfs_pubsub/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "gtfs_pubsub"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 gtfs-realtime-bindings = "^1.0.0"
+pydantic = "^1.10.7"
 
 
 [build-system]
